--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
 	compile 'com.amazon.alexa:alexa-skills-kit:1.3.0'
+	compile 'com.google.oauth-client:google-oauth-client:1.22.0'
+	compile 'com.google.http-client:google-http-client-jackson2:1.22.0'
 }
