--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,10 @@ repositories {
 
 dependencies {
 	compile 'com.amazon.alexa:alexa-skills-kit:1.3.0'
+	compile 'com.amazonaws:aws-java-sdk-dynamodb:1.11.118'
 	compile 'com.google.oauth-client:google-oauth-client:1.22.0'
 	compile 'com.google.http-client:google-http-client-jackson2:1.22.0'
+	compile 'org.postgresql:postgresql:42.0.0'
 }
 
 task buildZip(type: Zip) {
